--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,6 +1,6 @@
 [phases]
-build = "npm install --prefix backend && npm run build --prefix backend"
-start = "node backend/server.js"
+build = "npm install --prefix backend"
+start =  "node backend/server.js"
 
 [start]
 cmd = "node backend/server.js"
