--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,15 +4,14 @@ FROM node:18-alpine
 # Set the working directory in the container
 WORKDIR /app
 
-# Copy package.json and package-lock.json to the working directory
-# This is done separately to leverage Docker's caching for dependencies
-COPY backend/package*.json ./
+# Copy package.json and package-lock.json from the build context (which is 'backend')
+COPY package*.json ./
 
 # Install Node.js dependencies
 RUN npm install
 
-# Copy the rest of the backend application code
-COPY backend/ .
+# Copy the rest of the backend application code from the build context
+COPY . .
 
 # Expose the port your app runs on
 EXPOSE 3001
